--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -128,7 +128,6 @@ allow 130.193.15.186;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
-allow 139.162.249.209;
 allow 139.99.172.11;
 allow 139.99.184.245;
 allow 139.99.8.57;
@@ -669,7 +668,6 @@ allow 198.96.155.3;
 allow 198.98.48.31;
 allow 198.98.48.33;
 allow 198.98.48.35;
-allow 198.98.50.199;
 allow 198.98.50.215;
 allow 198.98.51.189;
 allow 198.98.51.249;
@@ -935,6 +933,7 @@ allow 205.185.124.193;
 allow 205.185.127.231;
 allow 209.135.168.10;
 allow 209.135.168.56;
+allow 209.135.170.59;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -1066,7 +1065,6 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
@@ -1078,6 +1076,7 @@ allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
+allow 2602:f9f3:0:2::148;
 allow 2602:f9f3:0:2::5;
 allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:77c0::1;
@@ -1093,7 +1092,6 @@ allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
-allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -1714,7 +1712,6 @@ allow 2a12:d8c0:109a:9001::7;
 allow 2a13:d200:8:6::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
-allow 31.220.75.237;
 allow 31.42.185.134;
 allow 35.0.127.52;
 allow 37.114.41.119;
@@ -1736,8 +1733,8 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 3.91.125.27;
 allow 43.157.40.39;
-allow 44.218.49.146;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1890,7 +1887,6 @@ allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
-allow 72.14.179.10;
 allow 72.211.49.235;
 allow 74.82.47.194;
 allow 77.220.196.253;
