--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -128,7 +128,6 @@ set_real_ip_from 2402:1f00:8201:61::2d91:af20;
 set_real_ip_from 2402:1f00:8201:61::da05:d4c6;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
-set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:93ff:fe2b:34f6;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
@@ -140,6 +139,7 @@ set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
+set_real_ip_from 2602:f9f3:0:2::148;
 set_real_ip_from 2602:f9f3:0:2::5;
 set_real_ip_from 2602:f9f3:0:2::91;
 set_real_ip_from 2602:fc24:12:77c0::1;
@@ -155,7 +155,6 @@ set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
-set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
