--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -163,7 +163,6 @@ allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.26.159.157;
 allow 154.30.210.38;
-allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -690,7 +689,6 @@ allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
 allow 199.83.103.12;
-allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -1065,6 +1063,7 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
@@ -1439,6 +1438,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1713,6 +1713,7 @@ allow 2a13:d200:8:6::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 34.204.148.70;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1733,7 +1734,6 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 3.91.125.27;
 allow 43.157.40.39;
 allow 45.11.59.28;
 allow 45.118.133.44;
@@ -1856,6 +1856,7 @@ allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.198;
 allow 5.255.98.23;
+allow 5.255.99.108;
 allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
@@ -1887,6 +1888,7 @@ allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
+allow 72.14.179.10;
 allow 72.211.49.235;
 allow 74.82.47.194;
 allow 77.220.196.253;
