--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -163,7 +163,6 @@ deny 154.213.185.230;
 deny 154.213.185.254;
 deny 154.26.159.157;
 deny 154.30.210.38;
-deny 155.138.161.171;
 deny 156.67.111.146;
 deny 160.119.249.240;
 deny 162.247.72.192;
@@ -690,7 +689,6 @@ deny 199.195.253.156;
 deny 199.195.253.180;
 deny 199.195.253.247;
 deny 199.83.103.12;
-deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4060:a01f::12a6;
 deny 2001:1af8:4700:a114:6::1;
@@ -1065,6 +1063,7 @@ deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.58.56.90;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
+deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:93ff:fe2b:34f6;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
@@ -1439,6 +1438,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1713,6 +1713,7 @@ deny 2a13:d200:8:6::1;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
+deny 34.204.148.70;
 deny 35.0.127.52;
 deny 37.114.41.119;
 deny 37.1.201.144;
@@ -1733,7 +1734,6 @@ deny 37.46.211.24;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
-deny 3.91.125.27;
 deny 43.157.40.39;
 deny 45.11.59.28;
 deny 45.118.133.44;
@@ -1856,6 +1856,7 @@ deny 5.255.97.221;
 deny 5.255.98.151;
 deny 5.255.98.198;
 deny 5.255.98.23;
+deny 5.255.99.108;
 deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
@@ -1887,6 +1888,7 @@ deny 66.78.40.182;
 deny 67.219.109.141;
 deny 71.19.144.106;
 deny 71.19.144.222;
+deny 72.14.179.10;
 deny 72.211.49.235;
 deny 74.82.47.194;
 deny 77.220.196.253;
