--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -163,7 +163,6 @@ set_real_ip_from 154.213.185.230;
 set_real_ip_from 154.213.185.254;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.30.210.38;
-set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.247.72.192;
@@ -690,7 +689,6 @@ set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
 set_real_ip_from 199.83.103.12;
-set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4060:a01f::12a6;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
@@ -1065,6 +1063,7 @@ set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2.58.56.90;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
+set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:93ff:fe2b:34f6;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
@@ -1439,6 +1438,7 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:104:fe02::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -1713,6 +1713,7 @@ set_real_ip_from 2a13:d200:8:6::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.204.148.70;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1733,7 +1734,6 @@ set_real_ip_from 37.46.211.24;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 3.91.125.27;
 set_real_ip_from 43.157.40.39;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
@@ -1856,6 +1856,7 @@ set_real_ip_from 5.255.97.221;
 set_real_ip_from 5.255.98.151;
 set_real_ip_from 5.255.98.198;
 set_real_ip_from 5.255.98.23;
+set_real_ip_from 5.255.99.108;
 set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
@@ -1887,6 +1888,7 @@ set_real_ip_from 66.78.40.182;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 71.19.144.222;
+set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.220.196.253;
