--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.163.218.11;
 allow 103.164.54.199;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -166,6 +167,7 @@ allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -177,6 +179,7 @@ allow 162.247.74.27;
 allow 162.247.74.7;
 allow 162.251.5.152;
 allow 163.172.45.102;
+allow 163.5.143.76;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
@@ -289,7 +292,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1086,6 +1088,7 @@ allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::1;
+allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -1670,8 +1673,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:89c::1;
-allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1737,9 +1738,9 @@ allow 37.46.211.23;
 allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
+allow 3.82.14.254;
 allow 38.97.116.244;
 allow 43.157.40.39;
-allow 44.212.147.227;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1845,7 +1846,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1932,9 +1932,9 @@ allow 81.17.20.59;
 allow 81.17.20.60;
 allow 81.17.28.95;
 allow 82.118.242.62;
-allow 82.153.138.119;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
 allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
@@ -1970,7 +1970,6 @@ allow 89.147.111.87;
 allow 89.185.82.71;
 allow 89.185.85.140;
 allow 89.187.143.31;
-allow 89.213.174.248;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.36.231.128;
@@ -2023,12 +2022,6 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
-allow 94.177.106.247;
-allow 94.177.106.37;
-allow 94.177.106.46;
-allow 94.177.106.54;
-allow 94.177.106.55;
-allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
@@ -2042,3 +2035,4 @@ allow 95.211.244.28;
 allow 96.126.98.146;
 allow 96.27.198.133;
 allow 98.128.173.33;
+allow 98.80.54.25;
