--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -150,6 +150,7 @@ allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::1;
+allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -733,8 +734,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:89c::1;
-allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
