--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.28.29.159;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -5,7 +6,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.163.218.11;
 allow 103.164.54.199;
-allow 103.174.253.222;
 allow 103.186.0.144;
 allow 103.193.179.233;
 allow 103.196.37.111;
@@ -727,7 +727,6 @@ allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
-allow 2001:4ba0:fff8:120::1;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
 allow 2001:620:20d0::23;
@@ -961,7 +960,6 @@ allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 217.197.107.138;
-allow 217.79.189.239;
 allow 23.129.64.131;
 allow 23.129.64.132;
 allow 23.129.64.133;
@@ -1476,6 +1474,7 @@ allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:193::100;
 allow 2a06:1700:0:3c::1;
+allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
@@ -1720,7 +1719,6 @@ allow 2a13:d200:8:6::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.217.207.87;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.190.85;
