--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -27,7 +27,6 @@ deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
-deny 2001:4ba0:fff8:120::1;
 deny 2001:620:20d0::19;
 deny 2001:620:20d0::20;
 deny 2001:620:20d0::23;
@@ -531,6 +530,7 @@ deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:193::100;
 deny 2a06:1700:0:3c::1;
+deny 2a06:1700:0:47::166;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
