--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -543,6 +543,7 @@ allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
+allow 2a0a:3840:1337:125:0:b9c1:7d69:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
