--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1,4 +1,3 @@
-deny 100.28.29.159;
 deny 102.130.113.9;
 deny 102.130.117.167;
 deny 102.130.127.117;
@@ -302,6 +301,7 @@ deny 185.181.61.142;
 deny 185.183.157.214;
 deny 185.183.159.40;
 deny 185.191.204.254;
+deny 185.193.125.105;
 deny 185.193.158.134;
 deny 185.193.52.180;
 deny 185.195.71.10;
@@ -1487,6 +1487,7 @@ deny 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
+deny 2a0a:3840:1337:125:0:b9c1:7d69:1337;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1739,6 +1740,7 @@ deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
 deny 43.157.40.39;
+deny 44.223.236.59;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
